--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,11 @@ button,
 }
 
 #undoButton {
-    left: 10px;
+    left: 25%;
 }
 
 #clearButton {
-    right: 10px;
+    right: 25%;
 }
 
 #clearButton,
@@ -90,6 +90,16 @@ button,
     padding: 5px;
     border-radius: 5px;
     font-family: 'Roboto', sans-serif;
+}
+
+@media screen and (max-width: 900px) {
+    #undoButton {
+        left: 10px;
+    }
+
+    #clearButton {
+        right: 10px;
+    }
 }
 
 @media screen and (max-width: 450px) {
